--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.class
-release
 .classpath
 .project
 
@@ -15,7 +14,8 @@ release
 hs_err_pid*
 
 /classes/
-/devel/
+/build/
+/dist/
 .settings
 *.orig
 *.bak
